# baxter-workspace-backup

./: .gitignore  README_CATKIN_BUILD.md  build_baxter_workspace.sh  setup_baxter_environment.sh
baxter_bridge_project/: 1_launch_rviz_moveit.sh  BAXTER_ENABLE_GUIDE.md  DAILY_QUICKSTART_GUIDE.md  baxter_command_bridge.py  baxter_enable.sh  baxter_enable_service.py  baxter_interface_move.py  baxter_troubleshooting_guide.md  complete_system_test.sh  deploy_fixed_system.sh  enable_and_move_baxter.py  enable_baxter_direct.sh  enable_baxter_direct_topic.sh  enable_baxter_fixed.py  enable_baxter_like_working.sh  enable_baxter_ros2.py  enable_baxter_simple.sh  enable_baxter_with_env.sh  instructions_for_rviz.md  launch_baxter_rviz_complete.py  launch_moveit2_baxter.sh  launch_rviz_with_moveit.sh  move_baxter_correct.py  simple_baxter_mover.py  start_baxter_bridge.sh  start_baxter_moveit.sh  start_complete_baxter_system.sh  test_action_servers.py  test_baxter_movement.sh  test_bridge_working.py  test_direct_command.py  test_moveit_motion.py  test_moveit_simple.py  test_new_system.py  test_ros2_control.py  verify_rviz_connection.py  wave_baxter.py
baxter_bridge_project/baxter_ros1/: Dockerfile.backup
baxter_bridge_project/moveit_ros2/: Dockerfile
baxter_bridge_project/shared_ws/: baxter_moveit_bridge.py  baxter_trajectory_action_server.py  baxter_trajectory_action_server_simple.py  disable_baxter.sh
baxter_bridge_project/shared_ws/install/baxter_bridge/share/baxter_bridge/: package.bash  package.zsh
baxter_bridge_project/shared_ws/install/baxter_core_msgs/share/baxter_core_msgs/: local_setup.sh  package.sh
baxter_bridge_project/shared_ws/install/baxter_maintenance_msgs/share/baxter_maintenance_msgs/: local_setup.sh
baxter_bridge_project/shared_ws/install/baxter_moveit_config/share/baxter_moveit_config/: local_setup.sh  package.bash  package.dsv  package.sh  package.zsh
baxter_bridge_project/shared_ws/install/baxter_moveit_config/share/baxter_moveit_config/config/: ompl_planning.yaml
baxter_bridge_project/shared_ws/install/my_ros2_test_package/share/my_ros2_test_package/: package.sh  package.zsh
baxter_bridge_project/shared_ws/install/rethink_ee_description/share/rethink_ee_description/: package.bash  package.zsh
baxter_bridge_project/shared_ws/log/: latest_build
baxter_bridge_project/shared_ws/src/baxter_moveit_config/config/: baxter_hardware.yaml  baxter_ros2_control.yaml  moveit_controllers.yaml
baxter_bridge_project/shared_ws/src/baxter_moveit_config/srdf/: baxter.srdf
baxter_bridge_project/shared_ws/src/my_ros2_test_package/: setup.py
baxter_bridge_project/shared_ws/urdf/: baxter_simple.urdf
baxter_docker_env/: Dockerfile  Dockerfile.save  ros_entrypoint.sh
baxter_ws/: docker-compose.yml
baxter_ws/docker/bridge/: Dockerfile
baxter_ws/shared_ws/: baxter.rviz  baxter_simple.rviz  bridge_ros1_ros2.py  real_robot_bridge.py  simple_baxter_control.py  test_moveit_execution.py  working_ros2_baxter_bridge.py
baxter_ws/shared_ws/install/: setup.sh
baxter_ws/shared_ws/install/baxter_bridge/share/baxter_bridge/: package.sh
baxter_ws/shared_ws/install/baxter_description/share/baxter_description/: package.zsh
baxter_ws/shared_ws/install/baxter_maintenance_msgs/share/baxter_maintenance_msgs/: package.sh
baxter_ws/shared_ws/install/baxter_moveit_config/share/baxter_moveit_config/: local_setup.dsv  package.ps1
baxter_ws/shared_ws/install/my_ros2_test_package/share/my_ros2_test_package/: package.bash  package.dsv
baxter_ws/shared_ws/install/rethink_ee_description/share/rethink_ee_description/: package.sh
baxter_ws/shared_ws/src/baxter_moveit_config/: CMakeLists.txt  package.xml
baxter_ws/shared_ws/src/baxter_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml
baxter_ws/shared_ws/src/baxter_moveit_config/scripts/: baxter_control_bridge.py
baxter_ws/shared_ws/src/my_ros2_test_package/: package.xml
baxter_ws/shared_ws/urdf/: baxter.urdf.xacro
baxter_ws/src/Other/baxter_bridge_project/: 2_move_baxter.py  BAXTER_CONTROL_GUIDE.md  CLAUDE.md  FINAL_WORKING_SYSTEM.md  WORKING_COMMANDS.md  baxter_commands.sh  baxter_trajectory_action_server_fixed.py  calibrate_baxter.py  check_baxter_status.sh  debug_baxter_connection.sh  demo_moveit_control.py  diagnose_baxter.py  diagnose_baxter.sh  docker-compose.yml  fix_rviz_display.py  launch_rviz_baxter.sh  manual_calibration_guide.py  move_baxter_real.py  moveit_execution_bridge.py  simple_baxter_check.py  simple_baxter_system.py  stop_baxter_bridge.sh  test_baxter_movement.py  test_complete_system.py  test_complete_system.sh  test_moveit_integration.py  test_rviz.py
baxter_ws/src/Other/baxter_bridge_project/baxter_ros1/: Dockerfile
baxter_ws/src/Other/baxter_bridge_project/shared_ws/: enable_baxter.sh  setup_assistant_simple.launch.py
baxter_ws/src/Other/baxter_bridge_project/shared_ws/install/: local_setup.sh
baxter_ws/src/Other/baxter_bridge_project/shared_ws/urdf/: baxter.urdf
baxter_ws/src/Other/moveit_ws/: .gitignore
baxter_ws/src/Other/moveit_ws/src/: .rosinstall
baxter_ws/src/Other/moveit_ws/src/sawyer_moveit/sawyer_moveit_config/launch/: moveit.rviz
baxter_ws/src/Other/moveit_ws/src/sawyer_moveit_controller/: CMakeLists.txt  package.xml
baxter_ws/src/Other/moveit_ws/src/sawyer_moveit_controller/src/: cartesian_and_obstacles.cpp  demo.cpp  go_home.cpp  joint_space.cpp  move_to_pose.cpp  path_constraints.cpp
baxter_ws/src/Other/sawyer_ws/: Sawyer_Simulations_Commands
baxter_ws/src/baxter_common/.gitt/: index  packed-refs
baxter_ws/src/baxter_common/.gitt/logs/: HEAD
baxter_ws/src/baxter_common/.gitt/objects/pack/: pack-bb47da01e96850b1d92cffe051204932efb876cb.idx
baxter_ws/src/baxter_examples/scripts/: ai_demo.py  current_joint_angles.py  demo.py  diagnose.py  ik_test.py  inspect  inspect_demo.py  inspect_via_joint.py  pick_and_place.py  pose.py  print_endpoint_poses.py
baxter_ws/src/fort_lewis_demo/scripts/: README.md  baxter_communication.py  baxter_demo_main.py  baxter_demo_setup.py  baxter_face_expressions.py  baxter_movements.py  master_demo.py
(+42 files in other folders)
