<?xml version="1.0"?>
<package format="2">
  <name>sawyer_moveit_controller</name>
  <version>0.0.0</version>
  <description>The sawyer_moveit_controller package</description>
  <maintainer email="your_email@todo.todo">Your Name</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Core ROS dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  
  <!-- MoveIt dependencies -->
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  
  <!-- TF2 dependencies -->
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  
  <!-- Visualization dependencies -->
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>geometric_shapes</build_depend>
  
  <!-- Additional utilities -->
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>rosbag</build_depend>
  
  <!-- Build export dependencies -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>shape_msgs</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_planning</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>moveit_ros_perception</build_export_depend>
  <build_export_depend>moveit_visual_tools</build_export_depend>
  <build_export_depend>rviz_visual_tools</build_export_depend>
  <build_export_depend>geometric_shapes</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_eigen</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  
  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>rviz_visual_tools</exec_depend>
  <exec_depend>geometric_shapes</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  
  <export>
  </export>
</package>
